Fix vm options